# base64converter

./: CMakeLists.txt  README.md
include/: base64.hpp
resources/: mailFile.txt
test/: base64_file_test.cpp  base64_test.cpp
